[build-system]
requires = ["setuptools", "wheel"]


[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=docs --ignore-glob=papers --ignore-glob=experiments --ignore-glob=htmlcov"
norecursedirs = ".git ignore build __pycache__ dev _skbuild docs htmlcov"
filterwarnings = [
    "default",
    "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning",
    "ignore:.*Define the __nice__ method for.*:Warning",
    "ignore:.*private pytest class or function.*:Warning",
]
